--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,2 +1,37 @@
 @charset "utf-8";
 @import "_var","_mixin","_function";
+
+#cnt1{
+    background: $lightGray;margin-top: 95px;
+    .img_wrap{display: none;
+        position: relative;width: 1400px;height: auto;margin: 0 auto;
+        img{position: absolute;}
+        img:nth-child(1){width: 50px;height: 50px;top: 243px;left: 836px;}
+        img:nth-child(2){width: 105px;height: 105px;top: 50%;right: 44px;}
+        img:nth-child(3){width: 32px;height: 799px;bottom: 0;right: -234px;}
+        img:nth-child(4){bottom: 110px;right: -71px;}
+        img:nth-child(5){width: 65px;height: 65px;bottom: 72px;left: -44px;}
+    }
+    h2{
+        @include transform(perspective(1000px) rotateY(50deg));
+        font-size: 100px;margin: 100px 0 200px;margin: 0 auto;
+    }
+    p{
+        position: relative;color: $gray;text-align: center;margin-bottom: 33px;
+        &::before{
+            @include transX-50;
+            content: "";position: absolute;top: -150px;left: 50%;width: 2px;height: 100px;background: $gray;
+        }
+    }
+}
+#cnt2{
+    .gnb{padding: 228px 0;}
+    #indexGnb{
+        li+li{margin-top: 90px;}
+    }
+}
+#footer{
+    text-align: center;
+    p:nth-child(1){margin-top: 180px;}
+    strong{display:block;font-size: 30px;font-weight: 400;background: #fff;width: 500px;border:5px solid #0BA9E9;background: #ffffff;padding: 56px 97.5px;margin: 90px auto 48px;}
+}
