--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -23,9 +23,9 @@ img {
 
 button {
   background: none;
-  cursor: pointer; }
+  cursor: url("../images/icon/pointer.svg"), pointer !important; }
 
-header, nav, section, footer {
+header, nav, section, article, footer {
   display: block; }
 
 .f_l {
@@ -54,8 +54,8 @@ header, nav, section, footer {
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(50%); }
 
-.w1440 {
-  max-width: 1440px;
+.w1400 {
+  max-width: 1400px;
   width: 100%;
   margin: 0 auto;
   overflow: hidden; }
@@ -64,6 +64,9 @@ header, nav, section, footer {
   color: #FB511D; }
 
 body {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   font-family: jeju,NtSansKR,poppins,serif;
   font-weight: 400;
   font-style: normal;
@@ -86,12 +89,93 @@ body {
   #skip a:focus {
     left: 0; }
 
-#header .logo a {
-  display: inline-block;
-  font-size: 30px;
-  background: #F9DCA2;
-  width: 268px;
-  height: 39px;
-  line-height: 39px; }
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 96px; }
+  #header .logo a {
+    position: absolute;
+    top: 28px;
+    left: 20px;
+    font-size: 30px;
+    background: #F9DCA2;
+    width: 268px;
+    height: 39px;
+    line-height: 39px;
+    font-weight: 400;
+    text-align: center; }
+  #header .gnb_open_btn {
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    background-size: cover !important;
+    position: absolute;
+    top: 18px;
+    right: 80px;
+    background: url("../images/icon/nav.svg") no-repeat center;
+    width: 60px;
+    height: 60px; }
+  #header .email {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-animation: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    transform-origin: top right;
+    position: absolute;
+    right: 20px;
+    top: 260%;
+    font-size: 16px; }
+
+.gnb {
+  width: 100%;
+  height: 100%;
+  background: #012875;
+  text-align: center; }
+  .gnb li a {
+    color: #ffffff;
+    font-family: NtSansKR;
+    font-weight: 700;
+    font-size: 100px;
+    width: 100%; }
+    .gnb li a:hover, .gnb li a:focus {
+      text-decoration: underline; }
+
+#gnb {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0; }
+  #gnb ul {
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-animation: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%; }
+    #gnb ul li + li {
+      margin-top: 50px; }
+  #gnb .gnb_close_btn {
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    background-size: cover !important;
+    position: absolute;
+    top: 77px;
+    right: 77px;
+    background: url("../images/icon/close_btn.svg") no-repeat center;
+    width: 82px;
+    height: 82px; }
+
+#footer .link {
+  margin: 277px 0 80px; }
+  #footer .link a {
+    font-size: 20px; }
+    #footer .link a + a {
+      margin-left: 24px; }
+    #footer .link a:hover, #footer .link a:focus {
+      text-decoration: underline; }
 
 /*# sourceMappingURL=common.css.map */
