--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,148 @@
+.tit {
+  font-family: hopang;
+  font-size: 100px; }
 
+#me .tit {
+  margin-bottom: 132px; }
+#me .click1, #me .click2 {
+  font-size: 20px;
+  color: #222222; }
+#me .click1 {
+  text-align: center;
+  margin-bottom: 52px; }
+#me .click2 {
+  margin-bottom: 56px; }
+#me .img_wrap {
+  position: relative;
+  width: 664px;
+  height: 647px;
+  background: #FB511D; }
+  #me .img_wrap img, #me .img_wrap .smile, #me .img_wrap button {
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    background-size: cover !important; }
+  #me .img_wrap img, #me .img_wrap .smile {
+    position: absolute;
+    background: no-repeat center; }
+  #me .img_wrap img {
+    width: 633px;
+    top: -30px;
+    right: 0;
+    background-image: url("../assets/images/aboutme/me.png"); }
+  #me .img_wrap .smile {
+    z-index: 10; }
+  #me .img_wrap .smile1 {
+    -webkit-transform: rotate(145deg);
+    -moz-transform: rotate(145deg);
+    -o-animation: rotate(145deg);
+    -ms-transform: rotate(145deg);
+    transform: rotate(145deg);
+    width: 67px;
+    height: 67px;
+    top: 158px;
+    left: 193px;
+    background-image: url("../assets/images/icon/smile_icon.svg"); }
+  #me .img_wrap .smile2 {
+    -webkit-transform: rotate(21deg);
+    -moz-transform: rotate(21deg);
+    -o-animation: rotate(21deg);
+    -ms-transform: rotate(21deg);
+    transform: rotate(21deg);
+    width: 56px;
+    height: 56px;
+    top: 199px;
+    left: 502px;
+    background-image: url("../assets/images/icon/smile_icon.svg"); }
+  #me .img_wrap .smile3 {
+    -webkit-transform: rotate(-106deg);
+    -moz-transform: rotate(-106deg);
+    -o-animation: rotate(-106deg);
+    -ms-transform: rotate(-106deg);
+    transform: rotate(-106deg);
+    width: 68px;
+    height: 68px;
+    top: 370px;
+    left: 473px;
+    background-image: url("../assets/images/icon/smile_icon.svg"); }
+  #me .img_wrap .smile4 {
+    -webkit-transform: rotate(-5deg);
+    -moz-transform: rotate(-5deg);
+    -o-animation: rotate(-5deg);
+    -ms-transform: rotate(-5deg);
+    transform: rotate(-5deg);
+    width: 44px;
+    height: 44px;
+    top: 426px;
+    left: 101px;
+    background-image: url("../assets/images/icon/smile_icon.svg"); }
+  #me .img_wrap button {
+    width: 86px;
+    height: 86px;
+    background: url("../assets/images/icon/q_mark.svg") no-repeat; }
+#me .txt p {
+  font-size: 80px;
+  font-family: hopang; }
+#me .text {
+  background: gold;
+  position: absolute;
+  width: 630px;
+  right: 0;
+  top: 454px;
+  line-height: 32px; }
+  #me .text p {
+    font-size: 22px;
+    word-break: keep-all; }
+  #me .text .txt1 {
+    padding-bottom: 30px; }
+  #me .text .txt2 {
+    padding-bottom: 100px; }
+  #me .text .txt3 {
+    padding-bottom: 409px; }
+#me .video {
+  position: relative;
+  height: 619px;
+  margin: 81px 0 301px; }
+  #me .video iframe {
+    float: right;
+    width: 1100px;
+    height: 619px; }
+  #me .video a {
+    position: absolute;
+    bottom: 0;
+    left: 73px;
+    font-size: 22px; }
+    #me .video a:hover, #me .video a:focus {
+      text-decoration: underline; }
+
+#skill .tit_wrap {
+  background: gold; }
+  #skill .tit_wrap * {
+    display: inline-block;
+    float: right; }
+  #skill .tit_wrap .tit {
+    margin-right: 10px; }
+  #skill .tit_wrap span {
+    position: relative;
+    font-size: 23px;
+    margin-right: 50px;
+    vertical-align: bottom; }
+    #skill .tit_wrap span::after {
+      -webkit-background-size: cover !important;
+      -moz-background-size: cover !important;
+      background-size: cover !important;
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -o-animation: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      content: "";
+      position: absolute;
+      background: url("../images/icon/v_icon.svg") no-repeat;
+      top: 50%;
+      right: -25px;
+      width: 20px;
+      height: 24px; }
+#skill .wrap {
+  background: #222222; }
 
 /*# sourceMappingURL=style.css.map */
