--- a/assets/css/_mixin.scss
+++ b/assets/css/_mixin.scss
@@ -46,8 +46,20 @@
     -moz-transition:$value;
     -o-transition:$value;
 }
-@mixin boxsizing($value...){
+@mixin boxsizing{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+@mixin flex{
+    -webkit-display:flex;
+    -moz-display:flex;
+    -ms-display:flex;
+    display:flex;
+}
+@mixin animation($value...){
+    -webkit-animation:$value;
+    -moz-animation:$value;
+    -o-animation:$value;
+    animation:$value;
 }
