--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -94,7 +94,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 96px; }
+  height: 96px;
+  z-index: 1000; }
   #header .logo a {
     position: absolute;
     top: 28px;
