--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -32,7 +32,7 @@ body{
     &:focus{left: 0;}
 }
 #header{
-    position: fixed;top: 0;left: 0;width: 100%;height: 96px;
+    position: fixed;top: 0;left: 0;width: 100%;height: 96px;z-index:1000;
     .logo a{position: absolute;top: 28px;left: 20px;font-size: 30px;background: #F9DCA2;width: 268px;height: 39px;line-height: 39px;font-weight: 400;text-align: center;}
     .gnb_open_btn{
         @include bgsize(cover);
