--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.tit {
+#me .tit, #skill .tit {
   font-family: hopang;
   font-size: 100px; }
 
@@ -6,12 +6,13 @@
   margin-bottom: 132px; }
 #me .click1, #me .click2 {
   font-size: 20px;
-  color: #222222; }
+  color: #656565; }
 #me .click1 {
   text-align: center;
   margin-bottom: 52px; }
 #me .click2 {
-  margin-bottom: 56px; }
+  margin-bottom: 56px;
+  margin-left: 218px; }
 #me .img_wrap {
   position: relative;
   width: 664px;
@@ -22,15 +23,13 @@
     -moz-background-size: cover !important;
     background-size: cover !important; }
   #me .img_wrap img, #me .img_wrap .smile {
-    position: absolute;
-    background: no-repeat center; }
+    position: absolute; }
   #me .img_wrap img {
+    display: inline-block;
     width: 633px;
     top: -30px;
     right: 0;
-    background-image: url("../assets/images/aboutme/me.png"); }
-  #me .img_wrap .smile {
-    z-index: 10; }
+    background: no-repeat center; }
   #me .img_wrap .smile1 {
     -webkit-transform: rotate(145deg);
     -moz-transform: rotate(145deg);
@@ -40,8 +39,7 @@
     width: 67px;
     height: 67px;
     top: 158px;
-    left: 193px;
-    background-image: url("../assets/images/icon/smile_icon.svg"); }
+    left: 193px; }
   #me .img_wrap .smile2 {
     -webkit-transform: rotate(21deg);
     -moz-transform: rotate(21deg);
@@ -51,8 +49,7 @@
     width: 56px;
     height: 56px;
     top: 199px;
-    left: 502px;
-    background-image: url("../assets/images/icon/smile_icon.svg"); }
+    left: 502px; }
   #me .img_wrap .smile3 {
     -webkit-transform: rotate(-106deg);
     -moz-transform: rotate(-106deg);
@@ -62,8 +59,7 @@
     width: 68px;
     height: 68px;
     top: 370px;
-    left: 473px;
-    background-image: url("../assets/images/icon/smile_icon.svg"); }
+    left: 473px; }
   #me .img_wrap .smile4 {
     -webkit-transform: rotate(-5deg);
     -moz-transform: rotate(-5deg);
@@ -73,17 +69,24 @@
     width: 44px;
     height: 44px;
     top: 426px;
-    left: 101px;
-    background-image: url("../assets/images/icon/smile_icon.svg"); }
+    left: 101px; }
   #me .img_wrap button {
     width: 86px;
     height: 86px;
     background: url("../assets/images/icon/q_mark.svg") no-repeat; }
-#me .txt p {
-  font-size: 80px;
-  font-family: hopang; }
+#me .txt {
+  position: absolute;
+  top: 952px;
+  right: 0;
+  width: 701px; }
+  #me .txt p {
+    font-size: 80px;
+    font-family: hopang; }
+  #me .txt .first {
+    float: right; }
+  #me .txt .mid {
+    padding-left: 107px; }
 #me .text {
-  background: gold;
   position: absolute;
   width: 630px;
   right: 0;
@@ -101,7 +104,7 @@
 #me .video {
   position: relative;
   height: 619px;
-  margin: 81px 0 301px; }
+  margin: 250px 0 301px; }
   #me .video iframe {
     float: right;
     width: 1100px;
@@ -115,7 +118,7 @@
       text-decoration: underline; }
 
 #skill .tit_wrap {
-  background: gold; }
+  margin-bottom: 45px; }
   #skill .tit_wrap * {
     display: inline-block;
     float: right; }
@@ -125,7 +128,7 @@
     position: relative;
     font-size: 23px;
     margin-right: 50px;
-    vertical-align: bottom; }
+    margin-top: 63px; }
     #skill .tit_wrap span::after {
       -webkit-background-size: cover !important;
       -moz-background-size: cover !important;
@@ -143,6 +146,393 @@
       width: 20px;
       height: 24px; }
 #skill .wrap {
-  background: #222222; }
+  background: #222222;
+  color: #ffffff;
+  padding: 100px 0; }
+  #skill .wrap .w1400 {
+    -webkit-display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 100px; }
+    #skill .wrap .w1400 .programming, #skill .wrap .w1400 .design, #skill .wrap .w1400 .ect {
+      width: calc(100% / 3); }
+  #skill .wrap strong {
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-animation: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    position: absolute;
+    font-size: 26px;
+    font-weight: 400;
+    text-align: center;
+    top: 50%;
+    left: 50%; }
+  #skill .wrap .txt {
+    position: relative;
+    height: 317px;
+    margin-top: 47px; }
+    #skill .wrap .txt::before {
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -o-animation: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+      content: "";
+      position: absolute;
+      width: 3px;
+      height: 317px;
+      background: #ffffff;
+      top: 0;
+      left: 50%; }
+    #skill .wrap .txt span {
+      position: absolute;
+      font-size: 20px; }
+      #skill .wrap .txt span::before {
+        -webkit-background-size: cover !important;
+        -moz-background-size: cover !important;
+        background-size: cover !important;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -o-animation: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        content: "";
+        position: absolute;
+        top: 50%;
+        width: 59px;
+        height: 10px;
+        background: no-repeat; }
+      #skill .wrap .txt span:nth-child(odd)::before {
+        background: url("../images/aboutme/skill_right.svg"); }
+      #skill .wrap .txt span:nth-child(even)::before {
+        background: url("../images/aboutme/skill_left.svg"); }
+#skill .hexagon {
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -o-animation: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  position: relative;
+  width: 189px;
+  height: 109px;
+  margin-top: 47.25px;
+  left: 50%; }
+  #skill .hexagon::before, #skill .hexagon::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 0;
+    border-left: 94.5px solid transparent;
+    border-right: 94.5px solid transparent; }
+  #skill .hexagon::before {
+    top: -47.25px; }
+  #skill .hexagon::after {
+    bottom: -47.25px; }
+#skill .programming .hexagon {
+  background: #FCAE26; }
+  #skill .programming .hexagon::before {
+    border-bottom: 47.25px solid #FCAE26; }
+  #skill .programming .hexagon::after {
+    border-top: 47.25px solid #FCAE26; }
+#skill .programming .txt span:nth-child(1) {
+  top: 37px;
+  left: 106px; }
+#skill .programming .txt span:nth-child(2) {
+  top: 84px;
+  left: 308px; }
+#skill .programming .txt span:nth-child(3) {
+  top: 128px;
+  left: 113px; }
+#skill .programming .txt span:nth-child(4) {
+  top: 174px;
+  left: 308px; }
+#skill .programming .txt span:nth-child(5) {
+  top: 218px;
+  left: 45px; }
+#skill .programming .txt span:nth-child(6) {
+  top: 266px;
+  left: 308px; }
+#skill .programming .txt span:nth-child(odd)::before {
+  background: url("../images/aboutme/skill_left.svg");
+  right: -71px; }
+#skill .programming .txt span:nth-child(even)::before {
+  background: url("../images/aboutme/skill_right.svg");
+  left: -75px; }
+#skill .design .hexagon {
+  background: #F60005; }
+  #skill .design .hexagon::before {
+    border-bottom: 47.25px solid #F60005; }
+  #skill .design .hexagon::after {
+    border-top: 47.25px solid #F60005; }
+#skill .design .txt::before {
+  height: 200px; }
+#skill .design .txt span:nth-child(1) {
+  top: 38px;
+  left: 307px; }
+#skill .design .txt span:nth-child(2) {
+  top: 82px;
+  left: 131px; }
+#skill .design .txt span:nth-child(3) {
+  top: 130px;
+  left: 307px; }
+#skill .design .txt span:nth-child(odd)::before {
+  left: -75px; }
+#skill .design .txt span:nth-child(even)::before {
+  right: -73px; }
+#skill .ect .hexagon {
+  background: #0075A1; }
+  #skill .ect .hexagon::before {
+    border-bottom: 47.25px solid #0075A1; }
+  #skill .ect .hexagon::after {
+    border-top: 47.25px solid #0075A1; }
+#skill .ect .txt span:nth-child(1) {
+  top: 39px;
+  left: 308px; }
+#skill .ect .txt span:nth-child(2) {
+  top: 91px;
+  left: 44px; }
+#skill .ect .txt span:nth-child(3) {
+  top: 151px;
+  left: 308px; }
+#skill .ect .txt span:nth-child(4) {
+  top: 238px;
+  left: 91px; }
+#skill .ect .txt span:nth-child(odd)::before {
+  left: -75px; }
+#skill .ect .txt span:nth-child(even)::before {
+  right: -71px; }
+#skill #jump {
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  left: 0;
+  bottom: 0;
+  background: #FB511D;
+  font-size: 16px;
+  text-align: center;
+  line-height: 60px; }
+#skill .guide, #skill .keyboard div {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  position: absolute;
+  background: #ffffff; }
+#skill .guide {
+  width: 373px;
+  height: 309px;
+  left: 70px;
+  bottom: 60px; }
+  #skill .guide p {
+    color: #222222;
+    text-align: center;
+    margin: 36px 0 30px; }
+  #skill .guide .keyboard div {
+    border: 1px solid #eee;
+    width: 60px;
+    height: 60px; }
+  #skill .guide .keyboard img {
+    display: block;
+    width: 26px;
+    margin: 23px auto; }
+  #skill .guide .keyboard .up {
+    top: 84px;
+    left: calc(50% - 30px); }
+  #skill .guide .keyboard .right {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-animation: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    top: 154px;
+    right: 86px; }
+  #skill .guide .keyboard .down {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-animation: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    top: 154px;
+    left: calc(50% - 30px); }
+  #skill .guide .keyboard .left {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-animation: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+    top: 154px;
+    left: 86px; }
+  #skill .guide .keyboard .spacebar {
+    width: 200px;
+    height: 50px;
+    bottom: 35px;
+    left: calc(50% - 100px);
+    font-size: 23px;
+    color: #656565;
+    text-align: center;
+    line-height: 50px; }
+#skill .movetxt {
+  margin-top: 89px; }
+  #skill .movetxt marquee {
+    font-size: 36px; }
+  #skill .movetxt .line {
+    font-family: hopang;
+    margin-top: 20px; }
+
+#cntA {
+  position: relative;
+  height: 1080px;
+  max-height: 1080px; }
+  #cntA::before, #cntA::after {
+    content: "";
+    position: absolute;
+    background: url("../images/common/color_dot.svg") no-repeat;
+    height: 620px;
+    width: 25px; }
+  #cntA::before {
+    top: 347px;
+    right: 402px; }
+  #cntA::after {
+    top: 0;
+    right: 211px; }
+  #cntA .right, #cntA .left {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-animation: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    position: absolute;
+    font-size: 70px; }
+  #cntA .right {
+    top: 333px;
+    right: -47px; }
+    #cntA .right::after {
+      content: "";
+      position: absolute;
+      width: 19px;
+      height: 7px;
+      background: #222222;
+      top: 36px;
+      right: -35px; }
+  #cntA .left {
+    top: 710px;
+    right: 50px; }
+  #cntA .loading {
+    position: absolute;
+    width: 200px;
+    height: 300px;
+    left: 205px;
+    top: 400px; }
+    #cntA .loading .squareS, #cntA .loading .squareL {
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+      border-radius: 2px;
+      position: absolute; }
+    #cntA .loading .squareS {
+      -webkit-transform: translateX(-50%);
+      -moz-transform: translateX(-50%);
+      -o-animation: translateX(-50%);
+      -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+      -webkit-animation: cubeS 3s linear infinite;
+      -moz-animation: cubeS 3s linear infinite;
+      -o-animation: cubeS 3s linear infinite;
+      animation: cubeS 3s linear infinite;
+      top: 0;
+      left: 50%;
+      width: 100px;
+      height: 100px;
+      background: #0075a1; }
+    #cntA .loading .squareL {
+      -webkit-animation: cubeL 3s linear infinite;
+      -moz-animation: cubeL 3s linear infinite;
+      -o-animation: cubeL 3s linear infinite;
+      animation: cubeL 3s linear infinite;
+      bottom: 0;
+      left: 0;
+      width: 200px;
+      height: 200px;
+      background: #FCAE26; }
+
+@keyframes cubeS {
+  0% {
+    -webkit-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    -moz-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    -o-animation: translateX(-50px) translateY(180px) rotate(0deg);
+    -ms-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    transform: translateX(-50px) translateY(180px) rotate(0deg);
+    width: 200px;
+    height: 50px; }
+  25% {
+    -webkit-transform: translateX(0) translateY(-200px) rotate(90deg);
+    -moz-transform: translateX(0) translateY(-200px) rotate(90deg);
+    -o-animation: translateX(0) translateY(-200px) rotate(90deg);
+    -ms-transform: translateX(0) translateY(-200px) rotate(90deg);
+    transform: translateX(0) translateY(-200px) rotate(90deg); }
+  50% {
+    -webkit-transform: translateX(0) translateY(-300px) rotate(180deg);
+    -moz-transform: translateX(0) translateY(-300px) rotate(180deg);
+    -o-animation: translateX(0) translateY(-300px) rotate(180deg);
+    -ms-transform: translateX(0) translateY(-300px) rotate(180deg);
+    transform: translateX(0) translateY(-300px) rotate(180deg);
+    width: 100px;
+    height: 100px; }
+  75% {
+    -webkit-transform: translateX(0) translateY(-200px) rotate(270deg);
+    -moz-transform: translateX(0) translateY(-200px) rotate(270deg);
+    -o-animation: translateX(0) translateY(-200px) rotate(270deg);
+    -ms-transform: translateX(0) translateY(-200px) rotate(270deg);
+    transform: translateX(0) translateY(-200px) rotate(270deg); }
+  100% {
+    -webkit-transform: translateX(-50px) translateY(180px) rotate(360deg);
+    -moz-transform: translateX(-50px) translateY(180px) rotate(360deg);
+    -o-animation: translateX(-50px) translateY(180px) rotate(360deg);
+    -ms-transform: translateX(-50px) translateY(180px) rotate(360deg);
+    transform: translateX(-50px) translateY(180px) rotate(360deg);
+    width: 200px;
+    height: 50px; } }
+@keyframes cubeL {
+  0% {
+    -webkit-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    -moz-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    -o-animation: translateX(-50px) translateY(180px) rotate(0deg);
+    -ms-transform: translateX(-50px) translateY(180px) rotate(0deg);
+    transform: translateX(-50px) translateY(180px) rotate(0deg);
+    width: 400px;
+    height: 100px; }
+  25% {
+    -webkit-transform: translateX(0) translateY(-200px) rotate(-30deg);
+    -moz-transform: translateX(0) translateY(-200px) rotate(-30deg);
+    -o-animation: translateX(0) translateY(-200px) rotate(-30deg);
+    -ms-transform: translateX(0) translateY(-200px) rotate(-30deg);
+    transform: translateX(0) translateY(-200px) rotate(-30deg); }
+  50% {
+    -webkit-transform: translateX(0) translateY(-300px) rotate(-90deg);
+    -moz-transform: translateX(0) translateY(-300px) rotate(-90deg);
+    -o-animation: translateX(0) translateY(-300px) rotate(-90deg);
+    -ms-transform: translateX(0) translateY(-300px) rotate(-90deg);
+    transform: translateX(0) translateY(-300px) rotate(-90deg);
+    width: 200px;
+    height: 200px; }
+  75% {
+    -webkit-transform: translateX(0) translateY(-200px) rotate(-135deg);
+    -moz-transform: translateX(0) translateY(-200px) rotate(-135deg);
+    -o-animation: translateX(0) translateY(-200px) rotate(-135deg);
+    -ms-transform: translateX(0) translateY(-200px) rotate(-135deg);
+    transform: translateX(0) translateY(-200px) rotate(-135deg); }
+  100% {
+    -webkit-transform: translateX(-50px) translateY(180px) rotate(-180deg);
+    -moz-transform: translateX(-50px) translateY(180px) rotate(-180deg);
+    -o-animation: translateX(-50px) translateY(180px) rotate(-180deg);
+    -ms-transform: translateX(-50px) translateY(180px) rotate(-180deg);
+    transform: translateX(-50px) translateY(180px) rotate(-180deg);
+    width: 400px;
+    height: 100px; } }
 
 /*# sourceMappingURL=style.css.map */
