--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,46 +1,30 @@
 #cnt1 {
-  background: #F4F4F4;
-  margin-top: 95px;
-  background-image: url("../assets/images/main/mint_flower.svg"), url("../assets/images/main/red_flower.svg"), url("../assets/images/main/plus.svg"), url("../assets/images/main/triangle.svg"), url("../assets/images/main/red_flower.svg");
+  position: relative;
+  background-color: #F4F4F4;
+  padding-top: 96px;
+  background-image: url("../assets/images/main/mint_flower.svg"), url("../assets/images/main/plus.svg"), url("../assets/images/main/triangle.svg"), url("../assets/images/main/red_flower.svg");
   background-repeat: no-repeat;
-  background-size: 50px 50px,105px 105px,32px 799px,110px 189px,65px 65px;
-  background-position: 1096px 243px,304px 50%,right bottom,1498px 80.8%,9.8% 102%; }
-  #cnt1 .bg {
-    display: none; }
-    #cnt1 .bg img {
-      position: absolute; }
-    #cnt1 .bg img:nth-child(1) {
-      width: 50px;
-      height: 50px;
-      top: 243px;
-      left: 1096px; }
-    #cnt1 .bg img:nth-child(2) {
-      width: 105px;
-      height: 105px;
-      top: 50%;
-      right: 304px; }
-    #cnt1 .bg img:nth-child(3) {
-      width: 32px;
-      height: 799px;
-      bottom: 0;
-      right: 20px; }
-    #cnt1 .bg img:nth-child(4) {
-      bottom: 110px;
-      right: 189px; }
-    #cnt1 .bg img:nth-child(5) {
-      width: 65px;
-      height: 65px;
-      bottom: 72px;
-      left: 219px; }
+  background-size: 50px 50px,32px 799px,110px 189px,65px 65px;
+  background-position: 1096px 243px,right bottom,1498px 80.8%,9.8% 102%; }
   #cnt1 h2 {
-    -webkit-transform: perspective(1000px) rotateY(50deg);
-    -moz-transform: perspective(1000px) rotateY(50deg);
-    -o-animation: perspective(1000px) rotateY(50deg);
-    -ms-transform: perspective(1000px) rotateY(50deg);
-    transform: perspective(1000px) rotateY(50deg);
+    -webkit-transform: perspective(1000px) rotateY(180deg);
+    -moz-transform: perspective(1000px) rotateY(180deg);
+    -o-animation: perspective(1000px) rotateY(180deg);
+    -ms-transform: perspective(1000px) rotateY(180deg);
+    transform: perspective(1000px) rotateY(180deg);
+    -webkit-transition: transform 3.5s;
+    -moz-transition: transform 3.5s;
+    -o-transition: transform 3.5s;
+    position: relative;
+    z-index: 1;
     font-size: 100px;
-    margin: 100px 0 200px;
-    margin: 0 auto; }
+    margin: 100px 20px 200px; }
+    #cnt1 h2.on {
+      -webkit-transform: perspective(0px) rotateY(0deg);
+      -moz-transform: perspective(0px) rotateY(0deg);
+      -o-animation: perspective(0px) rotateY(0deg);
+      -ms-transform: perspective(0px) rotateY(0deg);
+      transform: perspective(0px) rotateY(0deg); }
   #cnt1 p {
     position: relative;
     color: #656565;
@@ -59,6 +43,16 @@
       width: 2px;
       height: 100px;
       background: #656565; }
+  #cnt1 .red_flower {
+    -webkit-animation: flower 5s linear infinite;
+    -moz-animation: flower 5s linear infinite;
+    -o-animation: flower 5s linear infinite;
+    animation: flower 5s linear infinite;
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    top: 30%;
+    right: 15.8%; }
 
 #cnt2 .gnb {
   padding: 228px 0; }
@@ -79,5 +73,13 @@
     background: #ffffff;
     padding: 56px 97.5px;
     margin: 90px auto 48px; }
+
+@keyframes flower {
+  100% {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-animation: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg); } }
 
 /*# sourceMappingURL=main.css.map */
