--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -52,7 +52,7 @@ body{
     }
 }
 #gnb{
-    display:none;position: fixed;top: 0;left: 0;
+    display:none;position: fixed;top: 0;right: -100%;z-index: 10;
     ul{
         @include translate-50;
         position: absolute;top: 50%;left: 50%;
