--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,15 +4,30 @@
 //about me
 #me .tit,#skill .tit{font-family: hopang;font-size: 100px;}
 #me{
-    .tit{margin-bottom: 132px;}
+    .bg img{
+        @include animation(rotate 60s linear infinite);
+    }
+    .tit{margin: 0 0 132px 10px;}
     .click1,.click2{font-size: 20px;color: $gray;}
-    .click1{text-align: center;margin-bottom: 52px;}
+    .click1{
+        @include transX-50;
+        position: absolute;top: 150px;left: 50%;
+    }
     .click2{margin-bottom: 56px;margin-left: 218px;}
+    
     .img_wrap{
-        position: relative;width: 664px;height: 647px;background: $orange;
-        img,.smile,button{@include cover;}
+        position: relative;width: 664px;height: 647px;background: $orange;z-index:1;
+        img,button,.q{@include cover;}
+        .q{
+            @include translate-50;
+            position: absolute;top: 50%;left: 50%;z-index:10;width: 86px;height: 86px;background: url("../assets/images/icon/q_mark.svg") no-repeat;
+        }
         img,.smile{position: absolute;}
-        img{display: inline-block;width: 633px;top: -30px;right: 0;background: no-repeat center;}
+        >img{
+            display: inline-block;width: 633px;top: -30px;right: 0;background: no-repeat center;
+            &::after{content:"";position: absolute;top: 0;left: 0;background: $orange;opacity: 98%;}
+        }
+        .smile{background: url("../images/icon/smile_icon.svg") no-repeat;}
         .smile1{
             @include transform(rotate(145deg));
             width: 67px;height: 67px;top: 158px;left: 193px;
@@ -29,20 +44,28 @@
             @include transform(rotate(-5deg));
             width: 44px;height: 44px;top: 426px;left: 101px;
         }
-        button{width: 86px;height: 86px;background: url("../assets/images/icon/q_mark.svg") no-repeat;}
+        &.on{
+            @include transX-50;
+            left:50%;
+        }
     }
     .txt{
-        position: absolute;top: 952px;right: 0;width: 701px;
+        position: absolute;top: 858px;right: 0;width: 701px;
         p{font-size: 80px;font-family: hopang;}
         .first{float:right;}
         .mid{padding-left: 107px;}
     }
     .text{
         position: absolute;width: 630px;right: 0;top: 454px;line-height: 32px;
-        p{font-size: 22px;}
-        .txt1{padding-bottom: 30px;}
-        .txt2{padding-bottom: 100px;}
-        .txt3{padding-bottom: 409px;}
+        p{position: relative;font-size: 22px;}
+        #txt1{margin-bottom: 30px;}
+        #txt2{margin-bottom: 100px;}
+        #txt3{margin-bottom: 200px;}
+        p::after{
+            @include transition(width 1s);
+            content:"";position: absolute;top: 0;right: 0;width: 100%;height: 100%;background: #fff;
+        }
+        p.on::after{width: 0;}
     }
     .video{
         position: relative;height: 619px;margin: 250px 0 301px;
@@ -52,6 +75,9 @@
             &:hover,&:focus{text-decoration: underline;}
         }
     }
+}
+@keyframes rotate{
+    100%{@include transform(rotate(360deg));}
 }
 #skill{
     .tit_wrap{
@@ -68,7 +94,7 @@
         }
     }
     .wrap{
-        background: $darkGray;color: #ffffff;padding: 100px 0;
+        background: $darkGray;color: #ffffff;padding: 100px 0;height: 620px;
         .w1400{
             @include flex;
             justify-content: space-between;padding-bottom: 100px;
@@ -156,14 +182,14 @@
     }
     #jump{
         @include radius(100%);
-        position: absolute;width: 60px;height: 60px;left: 0;bottom: 0;background: $orange;font-size: 16px;text-align: center;line-height: 60px;
+        position: absolute;width: 60px;height: 60px;left: 30px;bottom: 30px;background: $orange;font-size: 16px;text-align: center;line-height: 60px;
     }
     .guide,.keyboard div{
         @include radius(5px);
         position: absolute;background: #ffffff;
     }
     .guide{
-        width: 373px;height: 309px;left: 70px;bottom: 60px;
+        width: 373px;height: 309px;left: 100px;bottom: 90px;
         p{color: $darkGray;text-align: center;margin: 36px 0 30px;}
         .keyboard{
             div{border: 1px solid #eee;width: 60px;height: 60px;}
@@ -215,10 +241,13 @@
         .linkgo{color: $orange;background: url("../images/icon/infogo.svg") no-repeat;padding: 18px 0 0 19px;}
     }
     .img_wrap{
-        @include transY-50;background: gold;
-        position: absolute;left: 0;top: 50%;
-        .img{overflow: hidden;}
+        @include transY-50;background: purple;
+        position: absolute;left: 0;top: 50%;text-align: center;width: 778px;height: 507px;
+
+        .img{position: absolute;overflow: hidden;left: 0;bottom: 0;}
         .controller{
+            @include transX-50;
+            position: absolute;top: 0;left: 50%;
             button{
                 position: relative;font-size: 20px;
                 &::after{
@@ -229,12 +258,68 @@
             .next{
                 &::after{
                     @include cover;
-                    right: -31px;background: url("../images/icon/next.svg") no-repeat;
+                    right: -32px;background: url("../images/icon/next.svg") no-repeat;width: 27px;height: 26px;
                 }
             }
         }
     }
 }
+//info 
+#projectCnt .info{
+    .tit+p,.subtit,.color>strong,.color>p,.font>strong,.font>p{text-align: center;}
+    .color>strong,.color>p,.font>strong,.font>p{color: $gray;}
+    .color>strong,.font>strong{position: relative;display: block;}
+    .color>strong::after,.font>strong::after{
+        @include transX-50;
+        content:"";position: absolute;bottom: -30px;left: 50%;width: 20px;height: 1px;background: $gray;
+    }
+    .design{
+        .subtit{margin-bottom: 86px;}
+        .color>p,.font>p{margin: 65px 0 41px;}
+        .color{
+            ul{background: gold;text-align: center;height: 150px;}
+            li{
+                @include radius(100%);
+                display: inline-block;width: 150px;height: 150px;color: #ffffff;font-size: 30px;line-height: 150px;
+                &+li{margin-left: 37px;}
+            }
+        }
+        .font{
+            .title,.f_name{font-size: 23px;}
+            .f_name{color: $gray;}
+            .big,.small{font-weight: 700;}
+            .big{font-size: 65px;}
+            .small{font-size: 55px;}
+        }
+    }
+    .coding{
+        .subtit{
+            @include transX-50;
+            position: relative;display:inline-block;left: 50%;margin: 200px 0 80px;
+            &::after{
+                @include transY-50;
+                @include cover;
+                content:"";position: absolute;top: 50%;right: -25px;width: 20px;height: 24px;background: url("../images/icon/v_icon.svg") no-repeat;
+            }
+        }
+        .flex{
+            @include flex;
+            justify-content: space-between;
+            div{position: relative;text-align: center;}
+        }
+        .bg{overflow: hidden;width: 400px;height: 500px;margin-bottom: 50px;}
+        .circle{
+            @include transX-50;
+            @include radius(50%);
+            position: absolute;width: 300px;height: 300px;left: 50%;z-index:10;border: 5px solid #fff;
+        }
+    }
+    .sitego{
+        @include transX-50;
+        position: absolute;left: 50%;color: #ffffff;background: url("../images/icon/sitego.svg") no-repeat;font-size: 15px;width: 131px;height: 56px;padding: 18px 0 0 12px;
+    }
+}
+
 #cntA{
     position: relative;height: 1080px;max-height: 1080px;
     &::before,&::after{content:"";position: absolute;background: url("../images/common/color_dot.svg") no-repeat;height: 620px;width: 25px;}
@@ -267,13 +352,38 @@
         }
     }
 }
+#jaenung,#jaenung_info{background: $lightGray;}
 #jaenung{
-    background: $lightGray;height: 928px;
+    height: 928px;
     .w1400{height: 100%;}
     .img_wrap{
         .img{width: 778px;height: 389px;}
     }
 }
+#jaenung_info{
+    height: 2700px;
+    .tit{margin: 134px 0 87px;}
+    .tit+p,.subtit,.color>strong,.color>p,.font>strong,.font>p{text-align: center;}
+    .color>strong,.font>strong{display: block;}
+    .design{
+        .subtit{margin-top: 134px;}
+        .color{
+            li{
+                &:nth-child(1){background: #E60417;}
+                &:nth-child(2){background: #FF7800;}
+                &:nth-child(3){
+                    -webkit-background: linear-gradient(0deg, rgba(230,4,16,1) 0%, rgba(255,120,0,1) 100%);
+                    -moz-background: linear-gradient(0deg, rgba(230,4,16,1) 0%, rgba(255,120,0,1) 100%);
+                    -o-background: linear-gradient(0deg, rgba(230,4,16,1) 0%, rgba(255,120,0,1) 100%);
+                    background: linear-gradient(0deg, rgba(230,4,16,1) 0%, rgba(255,120,0,1) 100%);
+                }
+            }
+        }
+    }
+
+    .sitego{bottom: 200px;}
+}
+
 #what,#what_info,#kids,#kids_info{display:none;}
 @keyframes cubeS{
     0%{
